--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,9 +15,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
